feat: create front-end
